# a2a-playground

./: .dockerignore  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
angular/: .dockerignore  Dockerfile  README.md  angular.json  nginx.conf  package.json  proxy.conf.json  tsconfig.json
angular/src/: index.html  main.ts  styles.css
angular/src/app/: app.component.css  app.component.html  app.component.ts  oracle-api.service.ts  oracle.models.ts
astrology_agent/: Dockerfile  README.md  agent.py  agent_executor.py  main.py
orchestrator_agent/: Dockerfile  README.md  agent_executor.py  main.py  orchestrator.py
orchestrator_agent/tests/: test_birth_date_gate.py  test_orchestrator_response.py
scripts/: start_all.sh
streamlit_ui/: Dockerfile
tarot_agent/: Dockerfile  README.md  agent.py  agent_executor.py  main.py
tarot_agent/tests/: test_tarot_executor.py
ui_app/: Dockerfile  streamlit_app.py
web_search_agent/: Dockerfile  README.md  agent.py  agent_executor.py  main.py
